gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail11653.d
version https://git-lfs.github.com/spec/v1
oid sha256:38684b39b2af3efcde41ddf1b432fe2b5e16d4bb943f79627dc5004224eeac5f
size 531
